Atualizações nos templates e estilos conforme orientação

--- a/escola/.env.example
+++ b/escola/.env.example
@@ -1,6 +1,2 @@
-# Para usar SQLite (padrão):
-DATABASE_FILE=escola.db
-
-# Para usar outro banco via SQLAlchemy (PostgreSQL ou MySQL), descomente e configure:
-# DATABASE_URL=postgresql://usuario:senha@host:porta/nome_do_banco
-# DATABASE_URL=mysql+pymysql://usuario:senha@host:porta/nome_do_banco
+SQLALCHEMY_DATABASE_URI=postgresql://meuuser:suasenha@meuhost:5432/meubanco
+FLASK_SECRET_KEY=algumasecretkeysegura
