Atualizações nos templates e estilos conforme orientação

--- a/escola/.env.example
+++ b/escola/.env.example
@@ -1,2 +1,27 @@
+# ===========================================
+# MODELO DE EXEMPLO PARA CONFIGURAÇÃO DO SISTEMA ESCOLAR
+# ===========================================
+
+# ====== BANCO DE DADOS (ESCOLHA/EDITE UMA OPÇÃO) ======
+# Escolha APENAS UMA das linhas, conforme seu ambiente!
+
+# PostgreSQL (RECOMENDADO para produção/multiescolas)
 SQLALCHEMY_DATABASE_URI=postgresql://meuuser:suasenha@meuhost:5432/meubanco
+
+# MySQL/MariaDB
+# SQLALCHEMY_DATABASE_URI=mysql+pymysql://meuuser:suasenha@meuhost:3306/meubanco
+
+# SQLite (apenas para uso individual/local ou testes):
+# SQLALCHEMY_DATABASE_URI=sqlite:///escola.db
+
+# ====== OUTRAS CONFIGS ======
+
 FLASK_SECRET_KEY=algumasecretkeysegura
+
+# SMTP para envio de email (OPCIONAL)
+# SMTP_SERVER=smtp.gmail.com
+# SMTP_PORT=465
+# SMTP_USER=seu@email.com
+# SMTP_PASSWORD=sua_senha_de_app
+
+# ===========================================
